# mibilenfc

./: .gitignore  eMRTD_reader_SRS.md  eMRTD_reader_technical_summary.md
eMRTDReader/: README.md  b.bat  build.gradle  build_android_apk.bat  build_debug.bat  gradle.properties  local.properties.example  settings.gradle
eMRTDReader/.github/workflows/: gradle-verification.yml
eMRTDReader/app/: build.gradle  proguard-rules.pro
eMRTDReader/app/src/main/: AndroidManifest.xml
eMRTDReader/app/src/main/assets/: README_ASSETS.txt
eMRTDReader/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_nfc.xml  mrz_frame.xml  mrz_overlay.xml  photo_placeholder.xml
eMRTDReader/app/src/main/res/values/: colors.xml  (+3 more)
eMRTDReader/backend/: Dockerfile  deploy_docker_desktop.bat  install.bat  pyproject.toml  run_dev.bat
eMRTDReader/backend/app/: db.py  events.py  llm.py  main.py  schemas.py  settings.py
eMRTDReader/backend/app/static/: index.html  style.css
eMRTDReader/backend/data/: app.db
eMRTDReader/docs/: APPLY.md  ARCHITECTURE.md  BUILD.md  INTEGRATION.md  LIMITATIONS.md  MRZ_OCR_FILE_MAP.md  NFC_FILE_MAP.md  REPO_WALKTHROUGH_AND_REVIEW.md  decision_log.md  requirements_registry.md
eMRTDReader/mobile_android_java/: README.md  build.gradle
eMRTDReader/mobile_android_java/app/: build.gradle
eMRTDReader/mobile_android_java/app/src/main/: AndroidManifest.xml
eMRTDReader/mobile_android_java/gradle/wrapper/: gradle-wrapper.properties
eMRTDReader/scripts/tests/: gradle_checks.sh
eMRTDReader/sdk/: build.gradle  consumer-rules.pro
eMRTDReader/web/: README.md
(+230 files in other folders)
